# hyperstyle

./: .dockerignore  .eslintrc  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.base  MANIFEST.in  README.md  base.Dockerfile  package.json  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-evaluation.txt  requirements-grpc.txt  requirements-roberta.txt  requirements-test.txt  requirements.txt  run_cohesion.py  setup.cfg  setup.py  setup_environment.sh  tox.ini  whitelist.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  build_base_image.yml  build_image.yml  publish.yml  sort_whitespaces.yml
docker/dev/: Dockerfile
docker/prod/: Dockerfile
functional_tests/data/different_languages/kotlin/: main.kt
functional_tests/data/different_languages/python/: b.py
functional_tests/data/disable/: contains_flake8_issues.py
functional_tests/data/duplicates/: code_with_duplicate_issues.py
functional_tests/data/exit_codes/: with_issues.py
functional_tests/data/file_or_project/: file.py
functional_tests/data/file_or_project/project/: one.py
functional_tests/data/lines_range/: code_with_multiple_issues.py
functional_tests/tests/: conftest.py  test_different_languages.py  test_disable.py  test_duplicates.py  test_exit_code.py  test_file_or_project.py  test_multi_file_project.py  test_range_of_lines.py  test_single_file_json_format.py  test_verbosity.py
hyperstyle/src/python/: __init__.py
hyperstyle/src/python/common/: tool_arguments.py
model/dataset/: dataset_class.py
model/preprocessing/: qodana_run.py  unite_csv.py
review/: application_config.py  logging_config.py  run_tool.py
review/common/: file_system.py  java_compiler.py  language.py  parallel_runner.py  subprocess_runner.py
review/inspectors/: base_inspector.py  inspector_type.py  issue.py
review/inspectors/checkstyle/: checkstyle.py  issue_types.py
review/inspectors/detekt/: detekt.py  issue_types.py
review/inspectors/eslint/: .eslintrc  eslint.py  issue_types.py
review/inspectors/flake8/: .flake8  flake8.py  issue_types.py
review/inspectors/intellij/: intellij.py  jdk.table.xml
review/inspectors/parsers/: checkstyle_parser.py
review/inspectors/pmd/: issue_types.py  pmd.py
review/inspectors/pyast/: python_ast.py
review/inspectors/pylint/: issue_types.py  pylint.py  pylintrc
review/inspectors/spotbugs/: spotbugs.py
review/inspectors/springlint/: springlint.py
review/quality/: evaluate_quality.py  model.py
review/quality/rules/: best_practices_scoring.py  boolean_length_scoring.py  class_response_scoring.py  code_style_scoring.py  coupling_scoring.py  cyclomatic_complexity_scoring.py  error_prone_scoring.py  function_length_scoring.py  inheritance_depth_scoring.py  line_len_scoring.py  method_number_scoring.py  weighted_methods_scoring.py
review/reviewers/: common.py  perform_review.py  python.py  review_result.py
review/reviewers/utils/: code_statistics.py  issues_filter.py  metadata_exploration.py  print_review.py
src/python/: __init__.py
src/python/common/: tool_arguments.py
src/python/evaluation/: README.md  __init__.py  evaluation_config.py  evaluation_run_tool.py  support_functions.py  xlsx_run_tool.py
src/python/model/: README.md  __init__.py  evaluation.py  train.py
src/python/review/: application_config.py  logging_config.py  run_tool.py
test/python/: __init__.py  common_util.py
test/python/common/: __init__.py
test/python/evaluation/: __init__.py  conftest.py  test_data_path.py  test_output_results.py  test_remove_temp_files.py  test_tool_path.py  test_xlsx_file_structure.py  testing_config.py
test/python/functional_tests/: conftest.py  test_different_languages.py  test_difficulty_levels.py  test_disable.py  test_duplicates.py  test_exit_code.py  test_file_or_project.py  test_json_format.py  test_multi_file_project.py  test_range_of_lines.py  test_single_file_json_format.py  test_verbosity.py
test/python/inspectors/: __init__.py  common.py  conftest.py  test_checkstyle_inspector.py  test_common.py  test_detekt_inspector.py  test_eslint_inspector.py  test_filter_duplicate_issues.py  test_flake8_inspector.py  test_golang_lint_inspector.py  test_issue_configs.py  test_local_review.py  test_out_of_range_issues.py  test_pmd_inspector.py  test_pylint_inspector.py  test_python_ast.py  test_radon_inspector.py  test_spotbugs_inspector.py  test_springlint_inspector.py
test/python/quality/: test_penalty.py
tests/: __init__.py  conftest.py  test_checkstyle_inspector.py  test_detekt_inspector.py  test_eslint_inspector.py  test_filter_duplicate_issues.py  test_flake8_inspector.py  test_local_review.py  test_out_of_range_issues.py  test_pmd_inspector.py  test_pylint_inspector.py  test_python_ast.py  test_spotbugs_inspector.py  test_springlint_inspector.py
tests/data/java/: test_array_type.java  test_blocks.java  test_boolean_expr.java  test_class_with_booleans.java  test_closing_streams.java  test_constants.java  test_cyclomatic_complexity_bad.java  test_empty_lines_btw_members.java  test_for_loop.java  test_indentation_google_style.java  test_indentation_with_tabs.java  test_magic_numbers.java  test_method_params.java  test_spaces.java  test_suppress_rules.java  test_todo.java  test_valid_blocks.java  test_valid_default.java  test_valid_spaces.java  test_when_only_equals_overridden.java
tests/data/js/: case1_with_issues.js
tests/data/kotlin/: case12_bad_filename.kt  case14_keyword_spacing.kt  case15_empty_class_func.kt  case17_modifier_order.kt  case19_private_property.kt  case25_unreachable_code.kt  case26_var_could_be_val.kt  case2_valid_program.kt  case5_imports.kt
tests/data/python/: case10_unused_variable_in_loop.py  case12_unreachable_code.py  case16_comments.py  case1_simple_valid_program.py  case20_imports_order.py  case22_reassigning.py  case24_long_function.py  case28_todo_list.py  case30_allow_else_return.py  case3_redefining_builtin.py  case8_good_class.py
tests/data/python_ast/: function.py  many_bool_expressions.py  one_bool_expression.py
(+483 files in other folders)
